syntax = "proto3";
package cloud;

import "google/protobuf/timestamp.proto";

option go_package = "./grpc";

message CreateUsageEventReq {
  string resourceId = 1;
  float quantity = 2;
  google.protobuf.Timestamp startAt = 3;
}

message CreateUsageEventRes {
  string resourceId = 1;
  string usageEventId = 2;
  string status = 3;
}

message CreateUsageEventBatchReq {
  repeated CreateUsageEventReq request = 1;
}

message CreateUsageEventBatchRes {
  repeated CreateUsageEventRes result = 1;
}

service MeteringService {
  rpc CreateUsageEvent(CreateUsageEventReq) returns (CreateUsageEventRes) {}
  rpc CreateUsageEventBatch(CreateUsageEventBatchReq) returns (CreateUsageEventBatchRes) {}
}
